Revision history for Air

{{$NEXT}}
    - Redirects use cro delegate
    - .air.yaml to resources/

0.0.34  2025-11-24T18:32:28Z
    - add defaults file
    - refactor Base.rakumod code

0.0.32  2025-09-28T17:25:52+01:00
    - better redirects

0.0.31  2025-09-26T10:02:28+01:00
    - redirects

0.0.30  2025-09-25T14:48:27+01:00
    - html 404

0.0.29  2025-09-24T18:01:55+01:00
    - revert Cromponent to 0.0.13

0.0.28  2025-09-24T15:25:53+01:00
    - pin deps

0.0.27  2025-08-03T10:06:36+01:00
    - improve Table

0.0.26  2025-08-02T12:15:45+01:00
    - handle "../static/css" & "static/css";

0.0.25  2025-08-02T12:08:54+01:00
    - add site.serve

0.0.24  2025-08-01T08:21:58+01:00
    - pin use Cromponent:ver<0.0.13>

0.0.23  2025-07-21T23:06:13+01:00
    - faster Tabs

0.0.22  2025-07-20T09:59:48+01:00
    - box, dashboard, better Table

0.0.21  2025-07-15T16:25:34+01:00
    - JS-LINKS => SCRIPT-LINKS, CSS-LINKS => STYLE-LINKS

0.0.20  2025-07-07T11:39:14+01:00
    - pin Cromponent:ver<0.0.13>

0.0.19  2025-07-06T15:47:45+01:00
    - some tweaks to styles

0.0.18  2025-07-05T22:02:55+01:00
    - fix lightdark on load

0.0.17  2025-06-29T16:38:10+01:00
    - Air::Plugin::Hilite / Hilite / Rainbow
    - Markdown, Tabs, Lightbox, Dialog(some), Flexbox

0.0.16  2025-06-05T09:14:49+01:00
    - fix test & deps, keep Red optional

0.0.14  2025-05-08T22:32:41+01:00
    - Air::Form

0.0.13  2025-04-05T18:45:21+01:00
    - drop Data::Dump::Tree from deps

0.0.12  2025-04-05T07:59:52+01:00
    - tagged -> tag refactor
    - is routable -> is controller

0.0.11  2025-03-27T10:19:55Z
    - HTML id attrs ok

0.0.10  2025-03-22T21:29:23Z
    - analytics umami

0.0.9  2025-03-18T09:58:46Z
    - lightdark even better

0.0.8  2025-03-18T09:37:16Z
    - lightdark better

0.0.7  2025-03-17T20:42:54Z
    - default dark

0.0.6  2025-03-14T16:44:09Z
    - docs & test

0.0.5  2025-03-12T21:29:08Z
    - Air::Examples Site examples x09

0.0.4  2025-03-04T22:01:32Z
    - Improve A tag
