@@ -2,8 +2,6 @@ Document Index
 ===============
 
 - [Air](docs/Air.md)
-- [Air::Base](docs/Air/Base.md)
-- [Air::Base::Elements](docs/Air/Base/Elements.md)
 - [Air::Base::Tags](docs/Air/Base/Tags.md)
 - [Air::Base::Tools](docs/Air/Base/Tools.md)
 - [Air::Base::Widgets](docs/Air/Base/Widgets.md)
